# F-GRIN-metrology

./: .gitignore  README.md  config.py  environment.yml  lenvironment.yml  pyproject.toml  wenvironment.yml
fgrinmet/: __init__.py  globvar.py
fgrinmet/constructions/: __init__.py  geometries.py  zpol.py
fgrinmet/geopt/: __init__.py  comp.py  solver.py
fgrinmet/splitm/: __init__.py  components.py  experimental_setup.py  interpolation.py  propagation.py
fgrinmet/utils/: __init__.py  beams.py  coordinates.py  datasets.py  io_data.py  operators.py  ort_func.py  representation.py
notebooks/: Field_tracing.ipynb  first_approach.ipynb  geometric_optics.ipynb  gradient_computation.ipynb  object_creation.ipynb  paraxial_proof_concept.ipynb  rbf_optimizer.ipynb  second_approach.ipynb  sources_simulation.ipynb
scripts/: first_approach.py  main.py
scripts/examples/: data_processing.py  data_processing_modes.py  data_processing_tilted_waves.py  data_processing_xy.py  data_processing_z.py  hiperparameter_opt.py  splitm_analytical_test.py  splitm_grad_multmode.py  splitm_grad_new.py  splitm_grad_ort_func.py  splitm_grad_rbf.py  splitm_gradient.py  splitm_interpolation.py  splitm_shape_test.py  splitm_single_param_model.py  splitm_single_slice_grad.py  splitm_test.py  test.py  tests.py
scripts/figures/: figure_frontpage.py  first_approach.py
scripts/others/: Interpolation_nn.py  diffraction_tomography.py  first_approach.py  split_step.py  test.py  trilinear_interpolation.py
src/: zpol.py
tests/: test_IO_data.py  test_paths.py  test_utils.py
(+5 files in other folders)
