[build-system]
requires = ["setuptools>=78.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "f_grin_metrology"
version = "0.1.0"
description = "Module for metrology of F-GRIN media"
authors = [
    { name = "David", email = "dmorenovazrome@tudelft.nl" }
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["metrology", "F-GRIN", "python"]

[tool.setuptools.packages.find]
where = ["fgrinmet"]